tests/bad/12_bad_or_type_27.ris
void main():
    print false or "foo";
    return;