tests/bad/12_bad_or_type_27.err
Type error in line 2, column 11:
wrong type of expression: "foo"
expected type: bool
